--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h2 {
 h3 {
 	text-align: center;
 	font-size: 50px;
-	margin: 40px;
+	padding: 10px;
 	color: #19c7cd;
 	font-family: 'Righteous', cursive;
 }
@@ -72,7 +72,7 @@ h4 {
 	margin: auto;
 	width: 800px;
 	height: 380px;
-	background-color: rgba(255,255,255,0.6);
+	background-color: rgba(255,255,255,0.6	);
 	margin-top: 160px;
 	padding: 30px;
 	border: solid 2px #fff;
@@ -124,19 +124,14 @@ img {
 }
 
 /*footer*/
-#contact, 
-#work {
-	height: 350px;
-	width: 50%;
-	padding: 0px 50px;
-}
-
-#contact {
-	float: left;
+.footer {
+	height: 300px;
+	width: 100%;
+	padding: 0px 30px;
 	background-color: #292929;
 }
 
-#work {
+#contact {
+	width: 50%;
 	float: right;
-	background-color: #4aaaa5;
 }
