--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,18 +34,19 @@ body {
 	    display: flex;
 	    float: right;
 	    transition: .3s;
-	    height: 60px;
-	    padding: 16px;
+	    height: 30px;
+	    padding: 1px 0px 0px 0px;
+	    border: 4px solid #000;
 	}
+	/*
+		nav ul:hover {
+		    background-color: #fed402;
+		    border-radius: 5px;
+		}*/
 
-	nav ul:hover {
-	    background-color: #fed402;
-	    border-radius: 5px;
-	}
-
-	nav ul:hover>li a {
-	    color: #292929;
-	}
+	/*	nav ul:hover>li a {
+		    color: #292929;
+		}*/
 
 	nav ul:hover>.top {
 	    background-image: url('../svg/up_arrow.svg');
@@ -54,7 +55,7 @@ body {
 
 	nav ul li {
 	    list-style: none;
-	    margin: 0px 10px;
+	    margin: 0px 6px;
 	    text-align: center;
 	}
 
@@ -65,6 +66,10 @@ body {
 	    transition: .3s;
 	    font-size: 20px;
 	    font-family: 'Montserrat', sans-serif;
+	}
+
+	nav ul li a:hover {
+		color: #fed402;
 	}
 
 	nav ul li a.tgjactive {
@@ -103,7 +108,7 @@ body {
 
 /*introduction*/
 	#sec1 {
-	    height: 100%;
+	    height: 80%;
 	}
 
 	h2 {
@@ -119,7 +124,6 @@ body {
 
 
 /*client slideshow*/
-
 	h1 {
 	    text-align: center;
 	    font-size: 80px;
@@ -198,6 +202,8 @@ body {
 	#sec3 {
 	    background-color: #292929;
 	    padding: 20px;
+	    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
+
 	}
 
 	p.stepstext {
