--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,12 @@ body {
     padding: 0;
 }
 
-body {
-    /*background-image: url('../images/ggbridge.jpg');*/
-    }
+:root {
+	--introblue: #64D1FF;
+}
 
-h2, h3 {
+h2,
+#sec2 h3 {
 	text-align: center;
 }
 
@@ -20,15 +21,21 @@ h2, h3 {
 			background-color: #FF8E3A;
 			border: none;
 			color: #fff;
-			font-size: 22px;
+			font-size: 18px;
 			padding: 3px;
-			width: 150px;
-			height: 50px;
+			width: 130px;
+			height: 40px;
 			transition: all .5s;
 			cursor: pointer;
 			margin: auto;
 			font-family: 'Source Sans Pro', sans-serif;
 		}
+
+	#sec1 .startbutton {
+		width: 150px!important;
+		height: 50px!important;
+		font-size: 22px!important;
+	}
 
 	.startbutton span {
 			cursor: pointer;
@@ -59,20 +66,20 @@ h2, h3 {
 	header {
 		position: fixed;
 		width: 100%;
-		height: 80px;
+		height: 60px;
 		transition: .3s;
 		z-index: 1;
 	}
 
 	header #logo {
 	    margin: 3px 0px 0px 30%;
-	    height: 70px;
+	    height: 50px;
 	}
 
 	#headerBut {
 		margin: auto;
 		display: block;	
-		padding: 12px 0 0;
+		padding: 8px 0 0;
 		transition: all .5s ease;
 	}
 
@@ -80,7 +87,7 @@ h2, h3 {
 	    display: flex;
 	    float: right;
 	    transition: .3s;
-	    padding: 28px 25% 0 0;
+	    padding: 16px 25% 0 0;
 	}
 
 	nav ul li {
@@ -127,7 +134,7 @@ h2, h3 {
 /*welcome section*/
 	#sec1 {
 	    height: 90vh;
-	    background-color: #64D1FF;
+	    background-color: var(--introblue);
 	}
 
 	#sec1 .row {
@@ -186,135 +193,148 @@ h2, h3 {
 /*3 step process*/
 	#sec3 h2 {
 	    text-align: center;
-	    font-size: 50px;
+	    font-size: 30px;
 	    padding: 10px;
 	    color: #000;
-	    font-family: 'Source Sans Pro', sans-serif;
 	    margin: 0 0 20px;
 	    padding: 20px 0 0;
 	}
 
-	#sec3 {
-	    background-color: #D1D1D1;
-	    /*height: 110%;*/
+	#sec3 h3 {
+		font-size: 22px;
 	}
 
-	#sec3 #threestepprocess {
-		box-shadow: 8px 12px #2E78DE;
-		border-radius: 10px;
+	#sec3 {
+	    background-color: rgba(0, 0, 0, 0.1);
+	    height: 70%;
+	    border-top: 1px rgba(0, 0, 0, 0.2) solid;
+	    border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+	}
+
+	#sec3 #vbtop {
+		width: 100%;
+		height: 60px;
+		background-color: var(--introblue);
+		border-radius: 5px 5px 0 0;
+	}
+
+	#sec3 #vbtop .row:nth-child(1) {
+		width: 100%!important;
+		padding: 6px 6px 0;
+	}
+
+	#sec3 .vbcircles {
+		width: 15px;
+		height: 15px;
+		border-radius: 50%;
+		margin: 4px;
+	}
+
+	#sec3 #red {
+		background-color: red;
+	}
+
+	#sec3 #yellow {
+		background-color: yellow;
+	}
+
+	#sec3 #green {
+		background-color: green;
+	}
+
+	#sec3 #vbarrows {
+		width: 50px;
+		height: 20px;
+		background-color: #fff;
+	}
+
+	#sec3 #vbsearchbar {
+		width: 500px;
+		height: 20px;
+		background-color: #fff;
+	}
+
+	#sec3 #vbcontent {
+		width: 100%;
+		height: 350px;
+		background-color: #fff;
+		border-radius: 0 0 5px 5px;
+	}
+ 
+	#sec3 #processpic,
+	#sec3 #prev,
+	#sec3 #next {
+		text-align: center;
+	}
+
+	#sec3 #diffsteps{
+		padding: 80px 15px 0;
 	}
 
 	#sec3 .row {
-		width: 100%;
 		margin: 0!important;
-		margin: 20px 0 0;
 	}
 
-	#sec3 #steponebutton {
-		border-radius: 10px 0 0 0;
+	#sec3 .circles {
+		width: 15px;
+		height: 15px;
+		background-color: #bbb;
+		display: inline-block;
+		border-radius: 50px;
 	}
 
-	#sec3 #stepthreebutton {
-		border-radius: 0 10px 0 0;
+	#sec3 .activestep {
+		background-color: #000;
 	}
 
-	#sec3 .process {
-		width: 100%;
-		height: 50px;
+	#sec3 #prev,
+	#sec3 #next {
 		border: none;
-		text-align: left;
-		font-size: 22px;
-		cursor: pointer;
-		background-color: #B0E8FF; 
-		text-align: center;
-		transition: .3s;
-		color: #000;
+		background-color: rgba(0, 0, 0, 0);
+		color: #292929;
+		width: 40px;
 	}
 
-	#sec3 .process:hover {
-		background-color: #64D1FF;
-	}
-
-	#sec3 .processactive {
-		background-color: #64D1FF;
-	}
-
-	#sec3 .steponepic {
-		height: 170px;
-		width: 220px;
-		border-radius: 5px;
-		background-color: #fafafa;
-		margin: 40px auto 0;
-		text-align: center;
-		font-size: 20px;
-		line-height: 300px;
-		box-shadow: 5px 5px #7A7A7A;
-	}
-
-	#sec3 #fullprocess {
-		width: 100%;
-		height: 450px;
-		background-color: #64D1FF;
-		border-radius: 0 0 10px 10px;
-		/*box-shadow: 10px 10px #3C55CC;*/
-	}
-
-	#sec3 #fullprocess p {
-		font-size: 24px;
-		/*text-align: center;*/
-		padding: 70px 0 0;
-		color: #fff;
-	}
-
-	#sec3 .col-lg-4,
-	#sec3 .col-lg-7,
-	#sec3 #threestepprocess,
-	#sec3 .process {
-		padding: 0!important;
-	}
-
-	#sec3 .process:focus {
+	#sec3 #prev,
+	#sec3 #next:focus {
 		outline: 0;
 	}
 
-	#sec3 .active {
-		visibility: hidden;
-		position: absolute;
+	#sec3 img {
+		cursor: pointer;
 	}
 
 /*FAQ*/
-	#sec3 #faq {
+	#sec4 #faq {
 		margin: auto;
 		width: 70%!important;
 	}
 
-	#sec3 .accordion {
+	#sec4 .accordion {
 		margin: 100px 0 100px;
 	}
 
-	#sec3 .card-body {
+	#sec4 .card-body {
 		color: #000!important;
 	}
 
-	#sec3 .card-header {
+	#sec4 .card-header {
 		width: 100%!important;
 		height: 50px!important;
 		text-decoration: none!important;
 	}
 
-	#sec3 .card {
+	#sec4 .card {
 		margin: 20px!important;
-	}
-
-/*empty*/
-	#sec3 #empty {
-		height: 1px;
 	}
 
 /*client slideshow*/
 	#sec5 {
-	    background-color: #fff;
-	    padding: 80px 0;
+	    background-color: rgba(0, 0, 0, 0.1);
+	    height: 60%;
+	    border-top: 1px rgba(0, 0, 0, 0.2) solid;
+	    border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+	    padding: 40px 0;
 	}
 
 	#sec5 .row {
