--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,11 +1,36 @@
-/*FAQ*/
+/*/*FAQ*/
+	#sec4 {
+		/*background-color: rgba(0, 0, 0, 0.1);*/
+	}
+
+	#sec4 h2 {
+		text-align: center;
+		font-size: 30px;
+		margin: 50px 0 30px;
+		border: 2px #000 solid;
+		width: 150px;
+		height: 55px;
+		padding: 8px 0 0;
+	}
+
 	#sec4 #faq {
 		margin: auto;
 		width: 70%!important;
+		/*padding: 20px 0 0;*/
 	}
 
-	#sec4 .accordion {
-		margin: 100px 0 100px;
+	#sec4 button {
+		font-size: 20px;
+		color: #fff;
+	}
+
+	#sec4 .card:nth-child(2),
+	#sec4 .card:nth-child(3) {
+		margin: 30px 0 0!important;
+	}
+
+	#sec4 .card:nth-child(3) {
+		margin-bottom: 80px!important;
 	}
 
 	#sec4 .card-body {
@@ -14,10 +39,29 @@
 
 	#sec4 .card-header {
 		width: 100%!important;
-		height: 50px!important;
+		height: 60px!important;
 		text-decoration: none!important;
+		background-color: #292929!important;
+		border-radius: 20px!important;
+		transition: .3s;
+	}
+
+	#sec4 .changeborder {
+		border-radius: 20px 20px 0 0!important;
 	}
 
 	#sec4 .card {
-		margin: 20px!important;
+		border-radius: 20px!important;
+		background-color: rgba(0, 0, 0, 0.1)!important;
+	}
+
+	#sec4 p {
+		text-align: center;
+		margin: 10px 0 0;
+		font-size: 18px;
+	}
+
+	#sec4 #collapseOne img {
+		width: 140px;
+		margin: 10px 15px;
 	}
