--- a/assets/css/ourprocess.css
+++ b/assets/css/ourprocess.css
@@ -4,18 +4,22 @@
 	    padding: 10px;
 	    color: #000;
 	    margin: 0 0 20px;
-	    padding: 20px 0 0;
+	    padding: 8px;
+	    border: 2px #000 solid;
+	    text-align: center;
+	    background-color: #fff;
 	}
 
 	#sec3 h3 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	#sec3 {
-	    background-color: rgba(0, 0, 0, 0.2);
+	    background-color: rgba(0, 0, 0, 0.05);
+	    /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));*/
 	    height: 600px;
-	    border-top: 1px rgba(0, 0, 0, 0.2) solid;
-	    border-bottom: 1px rgba(0, 0, 0, 0.3) solid;
+	    /*border-top: 1px rgba(0, 0, 0, 0.2) solid;*/
+	    border-bottom: 1px rgba(0, 0, 0, 0.2) solid;	
 	}
 
 	#sec3 #vbtop {
@@ -118,7 +122,7 @@
 	}
 
 	#sec3 #contentone {
-		padding: 80px 0 0;
+		padding: 70px 0 0;
 		width: 700px;
 		position: absolute;
 	}
@@ -175,6 +179,18 @@
 		margin-bottom: 20px;
 	}
 
+	#sec3 #contentone #vbstart {
+		text-align: center;
+		width: 200px;
+		height: 50px;
+		border-radius: 50px;
+		color: #fff;
+		background-color: #FF8E3A;
+		margin: 40px auto;
+		font-size: 26px;
+		padding: 5px;
+	}
+
 	#sec3 #contenttwo {
 		width: 380px;
 		height: 340px;
@@ -209,7 +225,7 @@
 	}
 
 	#sec3 #diffsteps{
-		padding: 150px 15px 0;
+		padding: 130px 15px 0;
 	}
 
 	#sec3 .row {
