--- a/assets/css/whywediff.css
+++ b/assets/css/whywediff.css
@@ -2,11 +2,17 @@
 	#sec2 {
 		background-color: #fff;
 		padding: 40px;
+		height: 360px;
 	}
 
 	#sec2 h2 {
 		font-size: 30px;
 		text-align: center;
+		margin: 0 auto 30px;
+		border: 2px #000 solid;
+		width: 350px;
+		height: 55px;
+		padding: 8px 0 0;
 	}
 
 	#sec2 h3 {
@@ -23,5 +29,4 @@
 		height: 70px;
 		margin: auto;
 		display: block;
-
 	}
